# canxin-claude-plugins

./: README.md
.claude-plugin/: marketplace.json
plugins/planpilot/: .gitignore  Cargo.toml  README.md
plugins/planpilot/.claude-plugin/: plugin.json
plugins/planpilot/commands/: planpilot-install.md  planpilot.md
plugins/planpilot/hooks/: hooks.json  pretooluse.sh  stop.sh
plugins/planpilot/src/: app.rs  cli.rs  db.rs  error.rs  hooks.rs  main.rs  model.rs  util.rs
plugins/planpilot/src/entities/: active_plan.rs  goal.rs  mod.rs  plan.rs  step.rs
plugins/planpilot/tests/: cli.rs
