[package]
name = "planpilot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
thiserror = "2.0.17"
fd-lock = "4.0.4"
sea-orm = { version = "1.1.19", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "with-chrono"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5.8"
shlex = "1.3.0"
shell-escape = "0.1.5"

[dev-dependencies]
tempfile = "3.24.0"
